[package]
name = "tokio-postgres-fromrow"
description = "Derivable trait that allows converting a postgres row to a struct"
documentation = "https://docs.rs/postgres-from-row"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Remo Pas <remo.pas22@gmail.com>"]
repository = "https://github.com/remkop22/postgres-from-row"
homepage = "https://github.com/remkop22/postgres-from-row"
license-file = "LICENSE"
keywords = ["postgres", "postgres-tokio", "postgresql", "from-row", "mapper"]
categories = ["database", "parsing", "data-structures"]

[workspace.dependencies]
tokio-postgres-fromrow-core = { path = "core", version = "0.1.0"}

[lib]
doctest = false



[dependencies]
tokio-postgres = { version = "0.7.13", default-features = false }
tokio-postgres-fromrow-core.workspace = true
